css/amp.css
/* ... */
/* For author styling. */
.amp-unresolved {
}

.i-amphtml-unresolved {
  position: relative;
  overflow: hidden !important;
}

.i-amphtml-scroll-disabled {
  overflow-x: hidden !important;
  overflow-y: hidden !important;
}

#i-amphtml-wrapper.i-amphtml-scroll-disabled {
  overflow-x: hidden !important;
  overflow-y: hidden !important;
}

/* "notbuild" classes are set as soon as an element is created and removed
   as soon as the element is built. */

.amp-notbuilt {
  /* For author styling. */
}

.i-amphtml-notbuilt {
  position: relative;
  overflow: hidden !important;
  color: transparent !important;
}

.i-amphtml-notbuilt:not(.i-amphtml-layout-container) > * {
  display: none;
}

.i-amphtml-ghost {
  visibility: hidden !important;
}

.i-amphtml-layout {
  /* Just state. */
}

.i-amphtml-error {
  /* Just state. */
}

/* layout=nodisplay are automatically hidden until displayed directly. */
[layout=nodisplay]:not(.i-amphtml-display) {
  display: none !important;
}

.i-amphtml-element > [placeholder] {
  display: block;
}

.i-amphtml-element > [placeholder].hidden,
.i-amphtml-element > [placeholder].amp-hidden {
  visibility: hidden;
}

.i-amphtml-element:not(.amp-notsupported) > [fallback] {
  display: none;
}

.i-amphtml-layout-size-defined > [placeholder],
.i-amphtml-layout-size-defined > [fallback] {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  z-index: 1;
}

.i-amphtml-notbuilt > [placeholder] {
  display: block !important;
}

.i-amphtml-hidden-by-media-query {
  display: none;
}

.i-amphtml-element-error {
  background: red !important;
  color: white !important;
  position: relative !important;
}

.i-amphtml-element-error::before {
  content: attr(error-message);
}

/**
 * Wraps an element to make the contents scrollable. This is
 * used to wrap iframes which in iOS always behave as if they had the
 * seamless attribute.
 * TODO(dvoytenko, #8464): cleanup old `i-amp-scroll-container`.
 */
i-amphtml-scroll-container, i-amp-scroll-container {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: block;
}

/**
 * Overflow:auto will be set with delay due to iOS bug where iframe is not
 * rendered.
 * TODO(dvoytenko, #8464): cleanup old `i-amp-scroll-container`.
 */
i-amphtml-scroll-container.amp-active, i-amp-scroll-container.amp-active {
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}

.i-amphtml-loading-container {
  display: block !important;
  z-index: 1;
}

.i-amphtml-notbuilt > .i-amphtml-loading-container {
  display: block !important;
}

/**
 * `i-amphtml-loading-container`, `i-amphtml-loader` and `i-amphtml-loader-dot` all support
 * a "loading indicator" usecase. `i-amphtml-loading-container` is mostly responsible
 * for alighning the loading indicator, while `i-amphtml-loader` and
 * `i-amphtml-loader-dot` are an implementation for a default loading indicator. The
 * default implementation includes the three-dot layout and animation.
 */
.i-amphtml-loading-container.amp-hidden {
  visibility: hidden;
}

.i-amphtml-loader-line {
  position: absolute;
  top:0;
  left: 0;
  right: 0;
  height: 1px;
  overflow: hidden !important;
  background-color:rgba(151, 151, 151, 0.2);
  display: block;
}

.i-amphtml-loader-moving-line {
  display: block;
  position: absolute;
  width: 100%;
  height: 100% !important;
  background-color: rgba(151, 151, 151, 0.65);
  z-index: 2;
}

@keyframes i-amphtml-loader-line-moving {
  0% {transform: translateX(-100%);}
  100% {transform: translateX(100%);}
}

.i-amphtml-loader-line.amp-active .i-amphtml-loader-moving-line {
  animation: i-amphtml-loader-line-moving 4s ease infinite;
}

.i-amphtml-loader {
  position: absolute;
  display: block;
  height: 10px;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
  transform-origin: 50% 50%;
  white-space: nowrap;
}

.i-amphtml-loader.amp-active .i-amphtml-loader-dot {
  animation: i-amphtml-loader-dots 2s infinite;
}

.i-amphtml-loader-dot {
  position: relative;
  display: inline-block;

  height: 10px;
  width: 10px;
  margin: 2px;
  border-radius: 100%;
  background-color: rgba(0, 0, 0, .3);

  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, .2);
  will-change: transform;
}

.i-amphtml-loader .i-amphtml-loader-dot:nth-child(1) {
  animation-delay: 0s;
}

.i-amphtml-loader .i-amphtml-loader-dot:nth-child(2) {
  animation-delay: .1s;
}

.i-amphtml-loader .i-amphtml-loader-dot:nth-child(3) {
  animation-delay: .2s;
}

@keyframes i-amphtml-loader-dots {
  0%, 100% {
    transform: scale(.7);
    background-color: rgba(0, 0, 0, .3);
  }

  50% {
    transform: scale(.8);
    background-color: rgba(0, 0, 0, .5);
  }
}


/**
 * "overflow" element is an element shown when more content is available but
 * not currently visible. Typically tapping on this element shows the full
 * content.
 */
.i-amphtml-element > [overflow] {
  cursor: pointer;
  /* position:relative is critical to ensure that [overflow] is displayed
     above an iframe; z-index is not enough. */
  position: relative;
  z-index: 2;
  visibility: hidden;
}

.i-amphtml-element > [overflow].amp-visible {
  visibility: visible;
}


/* Polyfill for IE and any other browser that don't understand templates. */
template {
  display: none !important;
}

/**
 * Authors can set this class on their html tags to provide `border-box` box-sizing
 * to every element in their document. Individual elements can override as necessary.
 */
.amp-border-box,
.amp-border-box *,
.amp-border-box *:before,
.amp-border-box *:after {
  box-sizing: border-box;
}

/* amp-pixel is always non-displayed. */
amp-pixel {
  display: none !important;
}
/* ... */

